--- a/Regresion_logistica/Ejercicio_logistica.ipynb
+++ b/Regresion_logistica/Ejercicio_logistica.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicio Python de RegresiÃ³n LogÃ­stica\n",
-    "Realizaremos un ejercicio de prueba para comprender como funciona este algoritmo"
+    "# Logistic regression exercise\n",
    ]
   },
   {
