--- a/Regresion_logistica/Ejercicio_logistica.ipynb
+++ b/Regresion_logistica/Ejercicio_logistica.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logistic regression exercise\n",
+    "# Logistic regression exercise\n"
    ]
   },
   {
