--- a/Regresion_logistica/Ejercicio_logistica.ipynb
+++ b/Regresion_logistica/Ejercicio_logistica.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cargamos los datos de entrada del archivo csv"
+    "## We load the input data from the csv file"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualizamos los datos"
+    "## We visualize the data"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creamos el modelo"
+    "## We create the model"
    ]
   },
   {
@@ -423,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adicional: ValidaciÃ³n del Modelo"
+    "# Model Validation"
    ]
   },
   {
@@ -486,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reporte de Resultados"
+    "## Results"
    ]
   },
   {
@@ -540,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ClasificaciÃ³n de nuevos registros"
+    "# new records"
    ]
   },
   {
