--- a/Regresion_logistica/Ejercicio_logistica.ipynb
+++ b/Regresion_logistica/Ejercicio_logistica.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We load the input data from the csv file"
+    "## Load the input data from the csv file"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We visualize the data"
+    "## Visualize the data"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We create the model"
+    "## Create the model"
    ]
   },
   {
