--- a/Árboles de decisión/Ejercicio_Arbol_de_Decision.ipynb
+++ b/Árboles de decisión/Ejercicio_Arbol_de_Decision.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Arbol de Decisión: ¿Quién llegará al número uno en Billboard 100?"
+    "# Decision Tree: Who will reach number one on Billboard 100?"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cargamos los datos de entrada"
+    "## Load the input data"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ¿Cuántos alcanzaron el número 1?"
+    "## How many reached number 1?"
    ]
   },
   {
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualicemos los Atributos de entrada"
+    "## Display input attributes"
    ]
   },
   {
@@ -422,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualizamos los años de nacimiento de los artistas"
+    "### Artists' birth years"
    ]
   },
   {
